--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,20 @@
 {
-    "name": "lispa/amos-workflow",
+    "name": "open20/amos-workflow",
     "description": "Sistema AMOS per il workflow",
     "keywords": ["amos", "yii2", "workflow"],
-    "homepage": "http://www.lispa.it/",
+    "homepage": "http://www.open20.it/",
     "type": "component",
-    "proscription": "BSD-3-Clause",
+    "license": "BSD-3-Clause",
     "support": {
         "issues": "http://www.example.com/",
         "forum": "http://www.example.com/forum/",
         "wiki": "http://www.example.com/wiki/",
-        "source": "https://github.com/lispa/amos-workflow"
+        "source": "https://github.com/open20/amos-workflow"
     },
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
-        "lispa/amos-core" : "*",
+        "open20/amos-core":"^1.9.50",
         "raoul2000/yii2-workflow": "^1.1.0",
         "cornernote/yii2-workflow-manager": "^1.0.1"
     },
@@ -26,7 +26,7 @@
     },
     "autoload": {
         "psr-4": {
-            "lispa\\amos\\workflow\\": "src"
+            "open20\\amos\\workflow\\": "src"
         }
     }
 }
